dataset1235/2025-2/610742602/users/1980422981/executions/906907063_291286518.log
== SUBMISSION (2025-08-19 21:22:59)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(11))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:19)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:32:54)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input())

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:23:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(11))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:04)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:33:59)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:20)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:37:10)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:32:51)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input())

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:33:56)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:32:53)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input())

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:46:24)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:05)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:18)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:33:56)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:33:54)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:37:49)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:27)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:19)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:32:41)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(11))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:32:40)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(11))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:33:53)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:32:46)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(11))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(11))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:13)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num)

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num)
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num)
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num)
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num)
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num)
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num)

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num)
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num)
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num)
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num)
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num)
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:32:52)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input())

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input())
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:33:55)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()num=int(input(num))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int()num=int(input(num))
               ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
